--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     <section class="footer">
         <div class="container">
-            <div class="footer-signature"><a href="http://www.pogudesu.com/">Made by <span class="link">Pogu Desu</span></a></div>
+            <div class="footer-signature"><a href="http://www.pogudesu.com/">This website is made by <span class="link">Pogu Desu</span></a></div>
         </div>
     </section>
     <script src="/script.js"></script>
