--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Pogu Desu</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="Style/style.css">
+        <link rel="icon" type="image/x-icon" href="https://www.pikpng.com/pngl/m/473-4731036_kawaii-pig-png-png-download-gif-animation-pig.png">
         <script src=""></script>
     </head>
 <body>
