new update on porfolio about the second project

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                 <br/><br/>
                 Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris non feugiat felis, in imperdiet dolor. Suspendisse ultrices urna quis augue facilisis mollis. In hac habitasse platea dictumst. Morbi vitae neque accumsan lectus congue feugiat quis ut nulla. Sed egestas lectus quis ipsum euismod luctus. Maecenas blandit ipsum nec metus tempor, vel ullamcorper enim efficitur. Donec eget consectetur nibh. Nullam ac egestas elit. Nunc semper nec arcu eu tincidunt. Sed id erat in dolor pulvinar ultrices vel quis nisl.
                 <br/><br/>
+                <div class="financial-report">
+                    Current Money: $184.93 CAD
+                    <br>
+                    Last Transaction:
+                    <br>
+                    1. Domain name and SSL coast $15.07
+                </div>
+
                 <!-- Donec viverra quis dui sit amet convallis. Phasellus vel felis lacus. Duis pretium diam eu massa eleifend ullamcorper vel eget nisl. Praesent iaculis est hendrerit dolor vestibulum vehicula. Nam lobortis convallis congue. Nam dignissim nisi vitae dolor tempor congue. Curabitur facilisis lectus vel suscipit faucibus. Donec nibh ante, convallis at bibendum non, gravida nec metus. Nullam scelerisque risus ut est vehicula dictum. Morbi odio quam, imperdiet non augue eu, mattis dapibus purus. Nam sagittis convallis justo quis faucibus. Etiam et auctor turpis. Morbi leo nisl, maximus quis ornare quis, porttitor ac massa. Mauris cursus purus eget mi condimentum vestibulum.
                 <br/><br/> -->
                 <!-- Aenean euismod nulla ut tortor molestie pulvinar nec sed lacus. Sed porta magna sed mauris vulputate, ac venenatis turpis rutrum. Pellentesque in nulla ut ante vulputate lacinia. Morbi ex mauris, vestibulum sit amet nunc quis, pulvinar tempus neque. Ut non varius tellus. Nulla dapibus tortor eget maximus ultricies. In sagittis ante ipsum, a pulvinar justo lobortis et. Sed eget vestibulum velit. Etiam faucibus nulla ac dui consequat, sit amet luctus libero accumsan. Integer et pretium orci. Mauris vitae gravida leo. Proin tempor tellus et nisl tristique blandit. Morbi interdum lorem pulvinar dictum porttitor. Curabitur vehicula nibh nunc, ac euismod felis bibendum quis. Nunc sit amet semper ante.
@@ -89,7 +97,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <div class="image-coming-soon image-settings"></div>
+                    <div class="image-project-2 image-settings"></div>
                     <div class="image-layover">
                         <div class="card-title">Indie Game Project</div>
                         <div class="card-description">This will be my second project. I hope that people will enjoy it. After finishing this, it will be one step towards my goal which is to create Vtuber Agency.</div>
