--- a/index.html
+++ b/index.html
@@ -34,11 +34,135 @@
     <section class="lore-section" id="home">
         <div class="container bg-lore-text">
             <div class="section-header pogu-desu">- Pogu Desu -</div>
-            <div class="lore-title">Chapter 1</div>
-            <p class="lore-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum metus arcu, quis lobortis est pellentesque vitae. Praesent scelerisque odio at tincidunt ullamcorper. Pellentesque feugiat dui vitae augue aliquet, ut accumsan quam gravida. Proin magna orci, pharetra sit amet augue sed, dignissim maximus ex. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt odio vitae sollicitudin porttitor. Fusce blandit ante congue, efficitur metus tempor, pulvinar orci. Sed malesuada, purus vel dapibus elementum, ante velit blandit tortor, vitae egestas tellus felis aliquam orci. Nam at risus diam. Nulla justo sem, dictum et eros eget, tincidunt finibus erat. Maecenas pellentesque, eros sed pretium vulputate, felis urna ultrices mauris, at venenatis lacus magna a ipsum. Quisque leo mauris, molestie eu purus a, fermentum viverra nulla.
-                <br/><br/>
-                Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris non feugiat felis, in imperdiet dolor. Suspendisse ultrices urna quis augue facilisis mollis. In hac habitasse platea dictumst. Morbi vitae neque accumsan lectus congue feugiat quis ut nulla. Sed egestas lectus quis ipsum euismod luctus. Maecenas blandit ipsum nec metus tempor, vel ullamcorper enim efficitur. Donec eget consectetur nibh. Nullam ac egestas elit. Nunc semper nec arcu eu tincidunt. Sed id erat in dolor pulvinar ultrices vel quis nisl.
+            <div class="lore-title">Chapter 1: OUT OF THIS WORLD</div>
+            <div class="lore-text">
+                <div style="text-align: center;"><i>“This World is but a dream… Reality starts when you die.” – Anonymous.</i></div>
+                <br />
+                Every death usually starts with some form of bitterness or love. 
+                <br /> <br />
+                Wagan Akihiko spawned his frustrations from the former. A bitter man walking down the path of regrets and a heart clenching feeling of hopelessness. 
+                <br /> <br />
+                At 26 he was working part-time at a convenience store. His hopes and dreams spiraling down the drain of the wishing well of a younger man who used to have dreams.
+                <br /> <br />
+                Everything irked him, and he cursed easily.
+                <br /> <br />
+                “Get a hold of yourself, you fool. You’re scaring the customers.” Said his boss, Hiro. A man who was growing weary of Wagan's deep feelings of despair.
+                <br /> <br />
+                “Bunch of losers, anyway.” Wagan mumbled.
+                <br /> <br />
+                “What was that?” 
+                <br /> <br />
+                “Nothing.”
+                <br /> <br />
+                “One of these days, you’ll be the death of yourself, Wagan.” 
+                <br /> <br />
+                He was the closest thing Wagan had to a father, and he had only known the man for the last six months. 
+                <br /> <br />
+                One day, as Wagan stood behind the counter watching the bustle of activities breeze by from the other side of the store’s transparent front door. He thought about how terrible his life was by doing nothing and procrastinating without achieving anything in life. 
+                <br /> <br />
+                He hadn’t saved any money. He hadn’t accomplished any of his dreams. Heck, he hadn’t even finished school. Not that it mattered much to him.
+                <br /> <br />
+                Though he was young by society’s standard, Wagan felt his life dwindling to a climax. 
+                <br /> <br />
+                He was a man filled to brim with regrets. 
+                <br /> <br />
+                If only he could have a reset button to start his life all over again.
+                <br /> <br />
+                Crushed by the weight of his own failures, Wagan ripped off his tie and walked out the convenience store in a fit of anger.
+                <br /> <br />
+                Lost in his thoughts, Wagan was dead before he even had time to realize he had been run over by a truck. 
+                <br /> <br />
+                Speeding at 150km per hour, the truck slammed into Wagan, running him over, and killing him at the spot.
+                <br /> <br />
+                
+                ••••••
+                <br /> <br />
+                His eyes flickered from a bright light. A white light, blinding, but he felt no pain. The forceful wind rushed past his face with the strength of a tidal wave.
+                <br /> <br />
+                It was almost as if he was standing next to the sun, without its destructive rays. 
+                <br /> <br />
+                But then, slowly, his eyes adjusted to the light, and Wagan realized he was falling…from what seemed to be,
+                <br /> <br />
+                The Sky.
+                <br /> <br />
+                He landed with a force so strong, that it knocked him out unconscious. 
+                <br /> <br />
+                Everything went black. 
+                <br /> <br />
+                A few minutes later, or so it seemed, Wagan woke up to a beautiful scenery. 
+                <br /> <br />
+                A vast green field with clear blue skies dotted with patches of thick clouds as far the eye could see.
+                <br /> <br />
+                The field itself was a meadow, and partly covering him was a brown tent, opened at both ends. 
+                <br /> <br />
+                At first, Wagan was confused by the sight that unfolded around him. He even thought he had gotten Isekai. 
+                <br /> <br />
+                Reincarnated to another world.
+                <br /> <br />
+                He felt happy for a moment. In fact, he closed his eyes for a few seconds just to relish the fresh smell in the air like honey. 
+                <br /> <br />
+                But as Wagan opened his eyes, he realized something was out of place. Something was terribly wrong.
+                <br /> <br />
+                And then he saw it.
+                <br /> <br />
+                His shadow didn’t elongate like that of a man. Instead it had a funny snout, and something that looked like a tail. 
+                <br /> <br />
+                His eyes almost popped out of their sockets when he realized what it was. 
+                <br /> <br />
+                Wagan had become;
+                <br /> <br />
+                A pig.
+                <br /> <br />
+                As he pondered on his frustrating dilemma, a mysterious voice rang in his head.
+                <br /> <br />
+                “Good morning, Pogu Desu.” 
+                <br /> <br />
+                Spooked out, Wagan screamed, but it sounded like a squeal, since he was only a pig in this realm. 
+                <br /> <br />
+                “Who is that!!”
+                <br /> <br />
+                “You can call me the System.” 
+                <br /> <br />
+                “What are you? How can’t I see you? How the hell are you in my head! And what is this place? Let me go. Now!” 
+                <br /> <br />
+                “Questions, questions, questions.” The system said in Wagan’s head. “I’m afraid I can’t let you go, Pogu.” 
+                <br /> <br />
+                “Please, I’ll do anything. Please.” 
+                <br /> <br />
+                “I have a preposition for you. My job is to guide lost souls into this world. Isekailando. A place where people get Isekai from the earth. Some become Magicians, Grim Reapers, Maids, Merchants, and a whole lot of things. I must say, this is the first time anyone is being reincarnated as a pig.”
+                <br /> <br />
+                Wagan just stood in place, wide eyed…and listening.
+                <br /> <br />
+                “My job is also to give a preprogrammed sequence of tasks to these people. You must complete the task. It’s the only way to survive Isekailando. Your task is to establish a Vtuber Agency on earth with a group of talented people who are good at singing, playing games, drawing, and entertaining people.”
+                <br /> <br />
+                Wagan got even more confused.
+                <br /> <br />
+                “How in the world am I supposed to do that? I work…worked, at a convenience store. My life didn’t mean anything while I was alive, and it sure as hell won’t mean anything now that I’m dead. Besides, how do I even do all these things while stuck as this…pig? Unless you’re offering to help me?”
+                <br /> <br />
+                The system was silent for a second, then said.
+                <br /> <br />
+                “I’ll help you. I’ll give you $200, plus access to Earth’s internet.”
+                <br /> <br />
+                “Wait, I’ll be working from here?” 
+                <br /> <br />
+                “Bye for now, Pogu.”
+                <br /> <br />
+                “Oh, c'mon!” 
+                <br /> <br />
+                But the system didn’t answer. It was gone.
+                <br /> <br />
+                Everything was happening so fast. 
+                <br /> <br />
+                Wagan pondered on what the System had told him. $200 was quite small to establish a company. And being a pig only made it worse.
+                <br /> <br />
+                But Wagan would have to find his way around it or risk dying. 
+                <br /> <br />
+                As he sat there, brooding over how miserable his life seemed to be getting by each passing second, there was a loud scream that came from over him.
+                <br /> <br />
+                Wagan looked up to see someone falling from the sky with the force of a tsunami. 
+                <br /> <br />
+                Someone hit the ground. Something out of this world.
+                <br /><br /><div style="border-top: 2px solid white ;"></div>
                 <br/><br/>
                 <div class="financial-report">
                     Current Money: $184.93 CAD
@@ -57,7 +181,7 @@
                 Vivamus interdum odio feugiat, tincidunt libero quis, pharetra elit. Nam quis consequat quam. Suspendisse potenti. Morbi felis felis, iaculis sit amet feugiat luctus, ultricies vel felis. Vestibulum et libero sagittis, euismod est nec, lobortis tellus. Nulla placerat dictum fermentum. In molestie sagittis lorem id mollis. Phasellus in ligula lacus. Donec non nulla id elit mattis aliquam.
                 <br/><br/>
                 Nam ultricies posuere mi, elementum malesuada massa molestie sed. Proin at ex at erat aliquet eleifend. Vestibulum at pellentesque arcu. Sed ac magna eget elit sollicitudin condimentum ut non nibh. Nulla facilisi. Nunc quis tempus velit, non fringilla lorem. Donec posuere posuere nibh. Cras eu suscipit nulla, quis vulputate lorem. Proin quis nisi sed ligula. -->
-            </p>
+            </div>
         </div>
 
     </section>
