--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="Style/style.css">
         <link rel="icon" type="image/x-icon" href="https://www.pikpng.com/pngl/m/473-4731036_kawaii-pig-png-png-download-gif-animation-pig.png">
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
         <script src=""></script>
     </head>
 <body>
@@ -30,6 +31,43 @@
             </div>
         </div>
     </nav>
+    <!-- Begin Mailchimp Signup Form -->
+    <section class="email-section">
+        <div class="container">
+            <div class="center-this">
+                <div id="mc_embed_signup">
+                    <form action="https://pogudesu.us10.list-manage.com/subscribe/post?u=630ec9b139afc51a6d32d7673&amp;id=244ff48ce6&amp;f_id=003237e2f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                        <h2>Sign up for my Newsletter <br> Current Project is "My House is Haunted"</h2>
+                        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+                </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                </div>
+                <div class="mc-field-group">
+                    <label for="mce-FNAME">First Name </label>
+                    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                    <span id="mce-FNAME-HELPERTEXT" class="helper_text"></span>
+                </div>
+                    <div id="mce-responses" class="clear foot">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_630ec9b139afc51a6d32d7673_244ff48ce6" tabindex="-1" value=""></div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button subscribe-button">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--End mc_embed_signup-->
     <!-- Main Body Home-->
     <section class="lore-section" id="home">
         <div class="container bg-lore-text">
@@ -425,6 +463,7 @@
             <div class="footer-signature"><a href="https://www.pogudesu.com/">This website is made by <span class="link">Pogu Desu</span></a></div>
         </div>
     </section>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
     <script src="/script.js"></script>
 </body>
 </html>
